2001-02-02  Akihiro Arisawa  <ari@atesoft.advantest.co.jp>

	* lisp/nnshimbun.el (nnshimbun-type-definition): Follow URL change
	of `xemacs'.
	(nnshimbun-xemacs-get-headers): Ditto.

2001-02-06  Katsumi Yamaoka <yamaoka@jpl.org>

	* README-gnus-bbdb.{en,ja}: Update the patch for BBDB v2.2.

2001-02-01  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-texi-format): A workaround for
	@ifnottex.

	* texi/Makefile.in (.texi, %.info): Don't use makeinfo command when
	gnus-ja.texi or message-ja.texi is given.  It is needed for some
	make command if which can not understand "%-ja:" or "%-ja.info:".
	(.texi, %.info, %-ja.info, %-ja): Don't eval `EMACSINFOHACK'.
	(EMACSINFOHACK): Move to lisp/dgnushack.el.

2001-01-29  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-article-mime-edit-exit): Use
	`buffer-substring-no-properties' instead of `format'.

2001-01-23  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* lisp/ptexinfmt.el: Support @letterpaper and @afivepaper.

2001-01-22  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 02.

	* Makefile.in (install-package-lisp): Use
	`install-without-compiling' instead of `install'.

	* lisp/Makefile.in (install): Use `install-without-compiling'.
	(install-without-compiling): New target.

2001-01-18  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 01.

2001-01-17  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-make-autoloads): Do nothing if the
	files for autoloads already exist.
	(dgnushack-unexporting-files): More useful message.

	* lisp/Makefile.in (install): Call `clever' before installing.
	(install-lisp): Remove.
	(clever): Check for whether the all elc files should be recompiled.

	* Makefile.in (xclever): New target.
	(install-package-lisp): Replace `install-lisp' with `install'.
	(install-package-ja): Replace `xlick' with `xclever'.
	(install-package): Ditto.
